--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 	compileOnly 'org.projectlombok:lombok'
@@ -36,7 +37,13 @@ implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 implementation 'jakarta.servlet:jakarta.servlet-api'
 implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api'
 implementation 'com.google.code.gson:gson:2.8.6'
+//시큐리티 사용할때
+testImplementation 'org.springframework.security:spring-security-test'
+implementation 'org.springframework.boot:spring-boot-starter-security'
+//jsp에서 시큐리티태그 사용할때
+ implementation 'org.springframework.security:spring-security-taglibs'
 
+	
 	
 }
 
