--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,4 @@ mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-
+logging.level.org.springframework.security=DEBUG
